--- a/customapi-integration/Jenkinsfile
+++ b/customapi-integration/Jenkinsfile
@@ -25,7 +25,7 @@ stages
 	{
 	steps{
         sh 'echo "this is a testing msg"'
-		sh 'echo ${accessToken}'
+		sh "echo ${accessToken}"
 		}
     }
 }
